--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -17,7 +17,7 @@
 
 .drop-down-menu {
 
-  /* Trigger - apply more top/bottom padding than '.btn--main' */
+  /* Trigger - apply more top/bottom padding than `.btn--main` */
   .drop-down-menu__trigger {@include to-em(padding-top padding-bottom, $spacing-half+$spacing-micro);}
 
   /* 'Apply' button (used on multi-facet lists) */
@@ -84,6 +84,12 @@
       position: relative;
       text-align: center;
       color: $color-light-txt;
+
+      /* Header text */
+      h3 {
+        display: inline;
+        @include font-size($font-size-sml);
+      }
 
       /* Back button */
       .btn {
