--- a/app/views/shared/_social_share.html.erb
+++ b/app/views/shared/_social_share.html.erb
@@ -14,7 +14,7 @@
 
     <%# Facebook %>
     <li class="social-share__facebook">
-      <a href="http://www.facebook.com/sharer/sharer.php?u=<%=URI::encode url %>&t=<%=URI::encode title %> at <%=URI::encode @centre.name %>" rel="external" target="_blank"><span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Facebook</span></a>
+      <a href="http://www.facebook.com/sharer/sharer.php?u=<%=URI::encode url %>&t=<%=URI::encode title %> <%=URI::encode "at #{@centre.name}" if @centre.present? %>" rel="external" target="_blank"><span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Facebook</span></a>
     </li>
     <%# //Facebook %>
 
@@ -33,14 +33,14 @@
     <% if defined?(image) && !image.blank? %>
       <%# Pinterest %>
       <li class="social-share__pinterest">
-        <a href="http://pinterest.com/pin/create/button/?url=<%=URI::encode url %>&media=<%=URI::encode image %>&description=<%=URI::encode title %> at <%=URI::encode @centre.name %>" rel="external" target="_blank"><span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Pinterest</span></a>
+        <a href="http://pinterest.com/pin/create/button/?url=<%=URI::encode url %>&media=<%=URI::encode image %>&description=<%=URI::encode title %> <%=URI::encode "at #{@centre.name}" if @centre.present? %>" rel="external" target="_blank"><span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Pinterest</span></a>
       </li>
       <%# //Pinterest %>
     <% end -%>
 
     <%# Email %>
     <li class="social-share__email">
-      <a href="mailto:?<%=URI::encode "subject=Look what I found at Westfield&body=I would like to share this #{email_body || ''} from Westfield with you. What do you think?\n\n#{title} at #{@centre.name}\n\n#{url}" %>"><span class="icon icon--email icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Email</span></a>
+      <a href="mailto:?<%=URI::encode "subject=Look what I found at Westfield&body=I would like to share this #{email_body || ''} from Westfield with you. What do you think?\n\n#{title}" %><%=URI::encode "at #{@centre.name}" if @centre.present? %><%=URI::encode "\n\n#{url}" %>"><span class="icon icon--email icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Email</span></a>
     </li>
     <%# //Email %>
 
