Removing 'shopping' from button text to be consistent with main header

--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -11,7 +11,7 @@
 
 			<%# Menu toggle button (palm) %>
 			<button type="button" class="btn btn--menu hide-fully--non-palm js-disabled-hide" toggle-visibility="header-menu-toggle-palm">
-				<span class="hide-visually">Choose a shopping centre</span>
+				<span class="hide-visually">Choose a centre</span>
 				<span class="btn--menu__icon"></span>
 			</button>
 			<%# //Menu toggle button (palm) %>
