#666: Added txt-hyphenate for deals tile

--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -10,7 +10,7 @@
   <% else %>
     <h3 class="tile__meta__hdr txt-truncate"><%= result.store_name %></h3>
   <% end %>
-  <p class="tile__meta__desc txt-hyphen"><%= result.title %></p>
+  <p class="tile__meta__desc txt-hyphenate"><%= result.title %></p>
 </div>
 
 <span class="tile__meta__icon">
