"also available at" on deals page is linking to non live centres.

--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -39,7 +39,7 @@
 </div>
 
 <%# Availability %>
-<% if @deal.stores and @deal.stores.size > 1 %>
+<% if false #@deal.stores and @deal.stores.size > 1 %>
   <div class="island">
     <h3 class="detail-view__hdr-sub detail-view__mrg-off hn"><%= @store.name %> also available at</h3>
     <ul class="detail-view__mrg-base">
