WIP style guide

--- a/app/assets/stylesheets/partials/abstractions/_box.scss
+++ b/app/assets/stylesheets/partials/abstractions/_box.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    Simple cosmetics for a container.
+  Simple cosmetics for a container.
 
-  Demo:
-    Style Guide -> Abstractions -> Box
+  Styleguide Box
 */
 
 .box {@include box;}
