--- a/app/assets/stylesheets/partials/abstractions/_toggle-visibility.scss
+++ b/app/assets/stylesheets/partials/abstractions/_toggle-visibility.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		Simply hiding/showing an element via a trigger powered by the 'Angular toggle visibility' directive.
+	Simply hiding/showing an element via a trigger powered by the 'Angular toggle visibility' directive.
 
-	Demo:
-		Style Guide -> Abstractions -> Toggle Visibility
+	Styleguide Toggle Visibility
 */
 
 /* JS users only */
