--- a/app/assets/stylesheets/partials/abstractions/_vertical-alignment.scss
+++ b/app/assets/stylesheets/partials/abstractions/_vertical-alignment.scss
@@ -3,7 +3,9 @@
    ====================================================================================== */
 
 /*
-  Vertically align an element within it's parent via CSS `display: table`.
+  Vertically align an element within its parent via CSS `display: table`.
+
+  .vert-align--left         - Left alignment.
 
   Styleguide Vertical Alignment
 */
