Change hover drop down headings to use 'h2' instead of 'strong'

--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -118,8 +118,8 @@
 
     /* Alternative header */
     .drop-down-menu__hdr-alt {
-      display: block;
       @include font-size($font-size);
+      font-weight: bold;
       border-bottom: 1px solid $color-grey-1;
       @include to-rem(padding-bottom, $spacing-third);
       @include to-rem(margin-bottom, $spacing-third+$spacing-quarter);
