--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -5,7 +5,7 @@
   <div class="container container--position">
     <div class="nav-contextual nav-contextual--dark js-nav-contextual js-viewport-check">
       <div class="nav-contextual__clip">
-        <nav class="nav-contextual__clip__inner" role="navigation" aria-label="Product categories navigation">
+        <nav class="nav-contextual__clip__inner" role="navigation" aria-label="<%= params[:controller].humanize %> categories navigation">
           <ul class="nav-contextual__list horiz-list js-nav-contextual-list"><%=
               render(
                 :collection => @super_categories,
