--- a/app/views/categories/_super_cat_nav.html.erb
+++ b/app/views/categories/_super_cat_nav.html.erb
@@ -12,7 +12,7 @@
   %>
   <div class="drop-down-menu__target drop-down box box--drop-down">
     <div class="island">
-      <strong class="drop-down-menu__hdr-alt">Top Categories</strong>
+      <h2 class="drop-down-menu__hdr-alt">Top Categories</h2>
       <ul class="drop-down-menu__list-alt">
         <%=
           render(
